...
              child: ListView(
                padding: const EdgeInsets.fromLTRB(22, 34, 22, 40),
                children: [
                  const Overline('Compete'),
                  const SizedBox(height: 15),
                  const Text(
                    'Calgary\ncompetitions.',
                    style: TextStyle(
                      fontSize: 46,
                      height: .98,
                      fontWeight: FontWeight.w900,
                      letterSpacing: -2.5,
                    ),
...
